[gd_scene load_steps=8 format=3 uid="uid://be3tr8ue175xe"]

[ext_resource type="Script" path="res://characters/Goomba/Goomba.gd" id="1_cefi0"]
[ext_resource type="Texture2D" uid="uid://be1ry55jkijoq" path="res://spritesheets/MarioAssets/Characters/Enemies.png" id="2_eohco"]

[sub_resource type="AtlasTexture" id="AtlasTexture_7hqcd"]
atlas = ExtResource("2_eohco")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_i6t3o"]
atlas = ExtResource("2_eohco")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_x33f4"]
atlas = ExtResource("2_eohco")
region = Rect2(32, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_w4fpb"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_7hqcd")
}],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_i6t3o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x33f4")
}],
"loop": true,
"name": &"walk",
"speed": 4.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_bjbbs"]
size = Vector2(18, 13)

[node name="Goomba" type="CharacterBody2D"]
script = ExtResource("1_cefi0")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(17, 18)
sprite_frames = SubResource("SpriteFrames_w4fpb")
animation = &"walk"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(17, 27.5)
shape = SubResource("RectangleShape2D_bjbbs")

[node name="RayCastRight" type="RayCast2D" parent="."]
position = Vector2(17, 26)
target_position = Vector2(10, 0)

[node name="RayCastLeft" type="RayCast2D" parent="."]
position = Vector2(17, 26)
target_position = Vector2(-10, 0)

[node name="RayCastUp" type="RayCast2D" parent="."]
position = Vector2(17, 26)
scale = Vector2(6, 3)
target_position = Vector2(0, -4.33333)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[connection signal="dead_signal" from="." to="." method="_on_dead_signal"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
